[package]
name = "orm_macro"
version = "1.0.0"
edition = "2021"
authors = ["Josue <josuebarretogit@gmail.com>"]
repository = "https://github.com/josueBarretogit/my_orm"
description = "Crate that provide type definitions for orm_macro_derive"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orm_macro_derive = { version="1.0.0",  path = "orm_macro_derive" }
