[package]
name = "orm_macro"
version = "1.1.2"
edition = "2021"
authors = ["Josue <josuebarretogit@gmail.com>"]
repository = "https://github.com/josueBarretogit/my_orm"
description = "Crate that provide type definitions for orm_macro_derive"
keywords = ["orm", "sql", "sqlbuilder"]
categories = ["utilities", "development-tools"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orm_macro_derive = { version="1.1.2",  path = "orm_macro_derive" }
