[package]
name = "orm_macro"
version = "1.2.3"
edition = "2021"
authors = ["Josue <josuebarretogit@gmail.com>"]
repository = "https://github.com/josueBarretogit/my_orm"
description = "The simplest sql builder that maps to your struct andlooks like an orm"
keywords = ["orm", "sql", "sqlbuilder", "postgres"]
categories = ["utilities", "development-tools" , "database"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orm_macro_derive = { version="1.1.3",  path = "orm_macro_derive" }


[features]
default = ["postgres"]
postgres = []
mysql = []
sqlite = []
