[package]
name = "orm_macro_derive"
version = "0.1.0"
edition = "2021"
authors = ["Josue <josueportela9@gmail.com>"]
repository = "https://github.com/josueBarretogit/my_orm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
proc-macro = true

[dependencies]
quote = "1.0.36"
syn = "2.0.60"
