[package]
name = "orm_macro_derive"
version = "1.0.0"
edition = "2021"
authors = ["Josue <josuebarretogit@gmail.com>"]
repository = "https://github.com/josueBarretogit/my_orm"
description = "A lightweight orm that only cares about building the sql"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
proc-macro = true

[dependencies]
quote = "1.0.36"
syn = "2.0.60"
