[package]
name = "orm_macro_derive"
version = "1.2.1"
edition = "2021"
authors = ["Josue <josuebarretogit@gmail.com>"]
repository = "https://github.com/josueBarretogit/my_orm"
description = "The simplest sql builder that maps to your struct andlooks like an orm"
keywords = ["orm", "sql", "sqlbuilder", "postgres"]
categories = ["utilities", "development-tools" , "database"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.81"
quote = "1.0.36"
syn = "2.0.60"

[features]
postgres = []
mysql = []
sqlite = []
